CXV1-5605 - Fixed Firefox bug with dropdown menu appearing behind widgets

--- a/src/app/components/reporting/realtime/realtimeDashboardEditor/realtimeDashboardsEditor.scss
+++ b/src/app/components/reporting/realtime/realtimeDashboardEditor/realtimeDashboardsEditor.scss
@@ -46,7 +46,6 @@ lo-resource-table {
 
 .dashboard-directive {
   position: relative;
-  z-index: 5;
 }
 
 .dashboard-fullscreen {
